- Added in Fix for Recipe details on Mobile View

--- a/assets/css/scss/partials/_single-templates.scss
+++ b/assets/css/scss/partials/_single-templates.scss
@@ -37,6 +37,9 @@
 				td:first-child {
 					color: $blue;
 				}
+				@media (max-width:600px) {
+					display:block;
+				}
 			}
 		}
 	}
